--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "cross-env NODE_ENV=development webpack serve --config webpack/webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack --config webpack/webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack  --config webpack/webpack.config.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.js"
   },
   "keywords": [],
@@ -45,6 +45,7 @@
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
+    "webpack-livereload-plugin": "^3.0.2",
     "webpack-merge": "^5.8.0"
   }
 }
