--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,13 @@
 {
     "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/Components/*": ["./src/components/*"]
-      }
-    }
-  }
+        "baseUrl": ".",
+        "target": "es6",
+        "module": "commonjs",
+        "paths": {
+          "@components/*": ["./src/components/*"],
+        }
+    },
+    "include": [
+      "src/**/*"
+    ]
+}
